--- a/gh-pages-site/src/components/layout.css
+++ b/gh-pages-site/src/components/layout.css
@@ -344,6 +344,7 @@ ul {
   margin-bottom: 1.45rem;
   list-style-position: outside;
   list-style-image: none;
+  list-style: none;
 }
 ol {
   margin-left: 1.45rem;
